--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,20 +6,50 @@ html, body{
 	padding: 0px;
 }
 
-md-toolbar h3 {
-	margin: auto;
-	font-weight: 500;
+/* Toolbar */
+.menu {
+	background-color: transparent;
+	border: none;
+	height: 38px;
+	margin: 16px;
+	width: 36px;
 }
 
-md-list-item > button {
-	width: 100%;
+md-toolbar h1 {
+	margin: auto;
+}
+
+/* Sidenav */
+
+md-list  .md-button {
+	color: inherit;
+	font-weight: 500;
 	text-align: left;
+	width: 100%;
+}
+
+md-list .md-button.selected {
+	color: #03a9f4;
+}
+
+md-sidenav md-list {
+	padding: 0px 0px 8px 0px;
+}
+
+/* Content */
+
+#content { 
+	overflow: hidden;
 }
 
 #content {
 	padding-left: 40px;
 	padding-right: 40px;
 	padding-top: 5px;
+}
+
+#content md-icon.avatar {
+	margin.top: 10px;
 }
 
 .avatar {
