--- a/views/pages/jobify.ejs
+++ b/views/pages/jobify.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="MyApp">
 <head>
 	<%include ../partials/header.ejs%>
 
@@ -10,6 +10,8 @@
 	<script src = "node_modules/angular-animate/angular-animate.js"></script>
 	<script src = "node_modules/angular-aria/angular-aria.min.js"></script>
 	<script src = "node_modules/angular-material/angular-material.min.js"></script>
+	<script src = "src/JobPositions.js"> </script>
+    <script src = "src/TabController.js"></script>
 	
 </head>
 
@@ -23,40 +25,65 @@
 		</div>
 	</md-toolbar>
 	
-	<div class="container" layout="row" flex>
-		<md-sidenav md-is-locked-open="true" class="md-whiteframe-5dp">
+	<div class="container" ng-controller="TabController as tab" layout="row" flex>
+		<md-sidenav md-is-locked-open="tab.sidenavView" class="md-whiteframe-5dp" flex="20">
 			<md-list>
-				<md-list-item>
-					<md-button>
+				<md-list-item ng-class="{ active:tab.isSelected(1) }">
+					<md-button ng-click="tab.selectTab(1)">
 						<md-icon md-svg-src="images/group.svg" class="avatar"></md-icon>
 						Job Positions
 					</md-button>
 				</md-list-item>
-				<md-list-item>
-					<md-button>
+				<md-list-item ng-class="{ active:tab.isSelected(2) }">
+					<md-button ng-click="tab.selectTab(2)">
 						<md-icon md-svg-src="images/suitcase.svg" class="avatar"></md-icon>
 						Skills
 					</md-button>
 				</md-list-item>
-				<md-list-item>
-					<md-button>
+				<md-list-item ng-class="{ active:tab.isSelected(3) }">
+					<md-button ng-click="tab.selectTab(3)">
 						<md-icon md-svg-src="images/hierarchy.svg" class="avatar"></md-icon>
 						Categories
 					</md-button>
 				</md-list-item>
 			<md-list>
 		</md-sidenav>
-		<md-content id="content" flex>
-			<md-icon md-svg-src="images/group.svg" class="avatar"></md-icon>
-			<h2>Job Positions</h2>
-			<p>
-				Listar, listar por categoria, alta, baja, modificacion.
-			</p>
+		<md-content id="content" flex ng-controller="JobController as job">
+			<md-button ng-click="tab.toggleSidenav()"> Toggle </md-button>
+			<div class="contentTitle" ng-show="tab.isSelected(1)">
+				<h2><md-icon md-svg-src="images/group.svg" class="avatar"></md-icon>Job Positions</h2>
+			</div>
+			<div class="contentTitle" ng-show="tab.isSelected(2)">
+				<h2><md-icon md-svg-src="images/suitcase.svg" class="avatar"></md-icon>Skills</h2>
+			</div>
+			<div class="contentTitle" ng-show="tab.isSelected(3)">
+				<h2><md-icon md-svg-src="images/hierarchy.svg" class="avatar"></md-icon>Categories</h2>
+			</div>
+			<md-divider></md-divider>
+			<md-content class="md-padding" layout-xs="column" layout="row">
+			<md-card ng-repeat="position in job.jobPositions">
+				<md-card-title>
+					<md-card-title-text>
+						<span class="md-headline">{{position.name}}</span>
+						<span class="md-subhead">{{(position.description|limitTo:20) + "..."}}</span>
+					</md-card-title-text>
+					<md-card-title-media>
+        		<div class="md-media-sm card-media">
+							<md-icon md-svg-src="images/suitcase.svg" class="logo"></md-icon>
+						</div>
+	        </md-card-title-media>
+				</md-card-title>
+				<md-card-actions layout="row" layout-align="end center">
+					<md-button class="md-primary md-raised">Eliminar</md-button>
+					<md-button class="md-primary md-raised">Modificar</md-button>
+				</md-card-actions>
+			</md-card>
+			</md-content>
 		</md-content>
 	</div>
 
 	<script>
-		angular.module('MyApp',['ngMaterial']).run(function(){
+		angular.module('MyApp',['ngMaterial','jobPositions']).run(function(){
 			console.log("MyApp is ready!");
 		});
 	</script>
