--- a/views/pages/jobify.ejs
+++ b/views/pages/jobify.ejs
@@ -10,109 +10,124 @@
 	<script src = "node_modules/angular-animate/angular-animate.js"></script>
 	<script src = "node_modules/angular-aria/angular-aria.min.js"></script>
 	<script src = "node_modules/angular-material/angular-material.min.js"></script>
-	<script src = "src/JobPositions.js"></script>
+    
+    <script src = "src/MyApp.js"></script>
+	<script src = "src/AppController.js"></script>
     <script src = "src/SidenavController.js"></script>
     <script src = "src/AddElementController.js"></script>
 	
 </head>
 
-<body ng-app="MyApp" layout="column">
-    
-	<md-toolbar>
-		<div class="md-toolbar-tools">
-			<md-icon md-svg-src="images/logo.svg" class="logo"></md-icon>
-			<span>Jobify Shared Server</span>
-			<span flex></span>
-		</div>
-	</md-toolbar>
-	
-    
-	<div class="container" ng-controller="AppController as app" layout="row" flex >
+<body ng-app="MyApp">
+<div ng-controller="AppController as AppCtrl" layout="column" layout-fill ng-cloak>
+<section layout="row">
+    <md-sidenav class="md-sidenav-left" md-component-id="left"
+        md-disable-backdrop md-whiteframe="4" md-is-locked-open="true">
+
+        <md-toolbar class="title" layout="column" layout-align="top center" style="padding-bottom: 30px">
+            <md-icon md-svg-src="images/logo.svg" class="logo"></md-icon>
+            <span class="title">Jobify Shared Server</span>
+        </md-toolbar>
         
-        <div ng-controller="SidenavController as sidenavCtrl" layout="column">
-            <md-button ng-click="sidenavCtrl.toggleSidenav()">A</md-button>
-            <md-sidenav md-is-locked-open="sidenavCtrl.sidenavView" class="md-whiteframe-5dp" flex>
-                <md-list>
-                    <md-list-item ng-repeat="r in app.resources">
-                        <md-button ng-click="app.selectResource(r)">
-                            <md-icon md-svg-src="{{r.image}}" class="avatar"></md-icon>
-                            {{r.name}}
-                        </md-button>
-                    </md-list-item>
-                </md-list>
-            </md-sidenav>
+        <md-list flex>
+            <md-list-item ng-repeat="resource in AppCtrl.resources">
+                <md-button ng-click="AppCtrl.selectResource(resource)">
+                    <md-icon md-svg-src="{{resource.image}}" class="avatar"></md-icon>
+                    {{resource.name}}
+                </md-button>
+            </md-list-item>
+        </md-list>
+        
+        <div layout="column" ng-cloak>
+            <md-button ng-click="toggleLeft()" class="md-accent">
+            Close this Sidenav
+            </md-button>
         </div>
-        
-		<md-content id="content" flex>
-            <div class="contentTitle" layout="row" ng-hide="app.hideContent">
-                <md-icon md-svg-src="{{ app.activeResource.image }}" class="avatar" ></md-icon>
-                <h2>{{ app.activeResource.name }}</h2>
+
+    </md-sidenav>
+    
+    <div layout="column" flex>
+        <div class="contentTitle" layout="row">
+            <md-toolbar layout="row" layout-align="center center">
+                <md-button ng-click="toggleLeft()" class="md-fab md-primary" ng-hide="isSidenavOpen" aria-label="Menu">
+                    <md-icon md-svg-src="images/menu.svg"></md-icon>
+                </md-button>
+                <span flex="5"></span>
+                <h2>{{ AppCtrl.activeResource.name }}</h2> <md-icon md-svg-src="{{ AppCtrl.activeResource.image }}" class="avatar" ng-hide="AppCtrl.hideContent"></md-icon>
                 <span flex></span>
                 <div>
-                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="app.listAll()">
+                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="AppCtrl.listAll()">
                         List All
                     </md-button>
                 </div>
                 <div>
-                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="app.search()">
+                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="AppCtrl.search()">
                         Search
                     </md-button>
                 </div>
                 <div>
-                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="app.clearElements()">
+                    <md-button class="md-primary md-raised md-mini" aria-label="Use Android" ng-click="AppCtrl.clearElements()">
                         Clear
                     </md-button>
                 </div>
                 <div ng-controller="AddElementController as addCtrl" >
-                    <md-button class="md-fab md-primary md-mini" aria-label="Use Android" ng-click="showAdvanced($event,app.activeResource)">
+                    <md-button class="md-fab md-primary md-mini" aria-label="Add Element" ng-click="showAdvanced($event, AppCtrl.activeResource)">
+                        <md-tooltip md-direction="bottom">Add Element</md-tooltip>
                         <md-icon md-svg-src="images/add.svg"></md-icon>
                     </md-button>
                 </div>
-			</div>
+            </md-toolbar>
+        </div>
+
+        <md-content layout="row" layout-wrap ng-cloak>
             
-			<md-divider></md-divider>
-            
-			<md-content layout="row" layout-padding layout-wrap layout-fill style="padding-bottom: 150px;" ng-cloak>
-                
-                <md-card ng-repeat="element in app.elements" layout-align="center center">
-                    <md-card-title>
+            <md-card ng-repeat="element in AppCtrl.elements" layout="row" style="height: 170px; width:300px" md-whiteframe="2">
+                <div layout="row" layout-align="start center">
+                    <md-card-title flex="75">
                         <md-card-title-text>
-                            <span class="md-headline">{{ element.name|limitTo:20 }} {{(element.name.length>20) ? "..." : "" }}</span>
+                            <span class="card-headline">{{ element.name|limitTo:15 }} {{(element.name.length>15) ? "..." : "" }}</span>
                             <span class="md-subhead">{{ element.category|limitTo:20 }} {{(element.category.length>20) ? "..." : "" }}</span>
-                            <p>{{ (element.description|limitTo:20)}}{{(element.description.length>20) ? "..." : "" }}</p>
+                            <span class="card-description">{{ (element.description|limitTo:20)}}{{(element.description.length>20) ? "..." : "" }}</span>
                         </md-card-title-text>
                         <md-card-title-media>
                             <div class="md-media-sm card-media">
-                                <md-icon md-svg-src="{{app.activeResource.image}}" class="cardImage"></md-icon>
+                                <md-icon md-svg-src="{{AppCtrl.activeResource.image}}" class="cardImage"></md-icon>
                             </div>
                         </md-card-title-media>
                     </md-card-title>
-                    <md-card-actions layout="row" layout-align="end center">
-                        <md-button  class="md-primary md-raised" ng-click="showDelDialog($event,app.activeResource,element)">
-                            Eliminar
-                        </md-button>
-                        <md-button class="md-primary md-raised">
-                            Modificar
-                        </md-button>
-                    </md-card-actions>
-                </md-card>
-                
-			</md-content>
-            
-            <md-divider></md-divider>
-            
-		</md-content>
-        
-	</div>
-    
-    <span flex="5"></span>
 
-	<script>
-		angular.module('MyApp',['ngMaterial','main']).run(function(){
-			console.log("MyApp is ready!");
-		});
-	</script>
+                    <span flex></span>
+                    
+                    <md-card-content layout="row" flex="25">
+                        <span flex></span>
+                        <md-card-actions layout="column" layout-align="end start">
+                            <md-button class="md-icon-button" ng-click="showDelDialog($event,AppCtrl.activeResource,element)" aria-label="Delete">
+                                <md-icon md-svg-src="images/cancel.svg" ></md-icon>
+                                <md-tooltip md-direction="bottom">Delete</md-tooltip>
+                            </md-button>
+                            <md-button class="md-icon-button" aria-label="Edit" ng-click="showModifyDialog($event,AppCtrl.activeResource,element)">
+                                <md-icon md-svg-icon="images/edit.svg"></md-icon>
+                                <md-tooltip md-direction="bottom">Edit</md-tooltip>
+                            </md-button>
+                            <md-button class="md-icon-button" aria-label="More" ng-click="showMore($event,AppCtrl.activeResource,element)">
+                                <md-icon md-svg-icon="images/more.svg"></md-icon>
+                                <md-tooltip md-direction="bottom">Show More</md-tooltip>
+                            </md-button>
+                        </md-card-actions>
+                    </md-card-content>
+                </div>
+            </md-card>
+            
+        </md-content>
+        
+        
+    </div>
     
+
+    
+    
+</section>
+</div>
 </body>
 
 </html>
