--- a/views/pages/modifyElement.html
+++ b/views/pages/modifyElement.html
@@ -2,13 +2,13 @@
   <form ng-cloak>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>{{ "modify " + resource.name + " element" | uppercase }}</h2>
+        <h2>{{ "modify" + resource.name + "element" | uppercase }}</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="cancel()">
           <md-icon md-svg-src="images/cancel.svg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
-    </md-toolbar>
+    </md-toolbar>   
 
     <md-dialog-content>
       <div class="md-dialog-content">
@@ -24,11 +24,13 @@
                     <div ng-message="required">This is required.</div>
                   </div>
                 </md-input-container>
-
-                <md-input-container flex="50">
+                
+                <md-input-container flex="50" ng-hide="{{ resource.name === 'Categories' }}">
                   <label>Category</label>
                   <md-select name="category" ng-model="element.category" required>
-                    <md-option ng-repeat="option in categories" value="{{option.name}}">{{option.name}}</md-option>
+                    <md-option ng-repeat="option in categories" value="{{option.name}}">
+                        {{option.name}}
+                    </md-option>
                   </md-select>
                   <div ng-messages="addForm.category.$error">
                     <div ng-message="required">This is required.</div>
